Bug 97120 - Calc: Enlarged text on cells with checkbox within border
Summary: Calc: Enlarged text on cells with checkbox within border
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.0.4.2 release
Hardware: x86-64 (AMD64) All
: high normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords: bibisected, bisected, regression
: 97244 100449 100722 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-14 02:26 UTC by Josh Kim
Modified: 2016-08-10 16:20 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Calc spreadsheet in concern (175.99 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-01-14 02:26 UTC, Josh Kim
Details
Screen-captured image of print preview in LO 5.0.4.2 (76.39 KB, image/png)
2016-01-14 02:29 UTC, Josh Kim
Details
Screen-captured image of print preview in LO 5.0.3.2 (80.63 KB, image/png)
2016-01-14 02:32 UTC, Josh Kim
Details
Same problem with one check box with the original English label (8.01 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-01-14 07:08 UTC, Usama
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Josh Kim 2016-01-14 02:26:03 UTC
Created attachment 121918 [details]
Calc spreadsheet in concern

Overview: After upgrade to LO 5.0.4.2, I am experiencing an overblown text sizes in certain parts of Calc's spreadsheet. The problem is persistent on cells with enlarged content is cells with checkbox and border(s) around them.

Steps to Reproduce: Open the attached spreadsheet file and select 'print preview' to check the symptom.

Actual Results: Font are enlarged (possibly to their biggest size).

Expected Results: Font should remain in their set sizes.

Version: 5.0.4.2 (x64)
Build: 2b9802c1994aa0b7dc6079e128979269cf95bc78
Locale: ko-KR (ko_KR) on Windows 10 Pro (x64)

Additional Builds and Platforms: No problems have been reported on other workstation with version 5.0.4.2 (both x86 and x64) on Windows 7 (x86 and x64)
Comment 1 Josh Kim 2016-01-14 02:29:18 UTC
Created attachment 121919 [details]
Screen-captured image of print preview in LO 5.0.4.2
Comment 2 Josh Kim 2016-01-14 02:32:00 UTC
Created attachment 121920 [details]
Screen-captured image of print preview in LO 5.0.3.2
Comment 3 Usama 2016-01-14 06:40:27 UTC
Confirmed in  Writer Libroffice 5.1.0.1 Ubuntu 15.04
It works Ok on LibreOffice 4.4.6.3 Ubuntu 15.04

Setting it to New.
Comment 4 Usama 2016-01-14 07:08:47 UTC
Created attachment 121926 [details]
Same problem with one check box with the original English label
Comment 5 Josh Kim 2016-01-14 07:34:42 UTC
I also confirm this on LO 5.1.0.1 (x64) on Windows 10 Pro (x64), I tested three different versions, actually, and forgot to mention this in the original report.
Comment 6 libing.alexe.lb 2016-03-10 00:48:27 UTC
Same problem on Calc 5.0.5.2. Hope you can fix it asap.
Comment 7 Josh Kim 2016-03-25 08:04:13 UTC
Could LO please look into this issue? The problem is critical and I don't have a sufficient permission to change the status/severity.
Comment 8 rollingerw 2016-04-19 09:47:48 UTC
Same problem on Calc 5.0.5 and 5.1 in spreadsheet in German and English

Hope you can fix it asap. in both versions

Using Windows 7 Professional

The importance should be changed to major since this feature didn´t cause any problems in earlier versions. e.g. LO 4.4
Comment 9 Kulo 2016-05-10 15:06:12 UTC
Also confirmed on Version: 5.1.3.2
Build-ID: 644e4637d1d8544fd9f56425bd6cec110e49301b
CPU-Threads: 4; BS-Version: Windows 6.1; UI-Render: Standard; 
Gebietsschema: de-AT (de_AT)
Comment 10 janvdberg 2016-06-02 15:18:31 UTC
I can confirm on  
Versie: 5.1.2.2 
Build ID: d3bf12ecb743fc0d20e0be0c58ca359301eb705f
CPU Threads: 4; Versie besturingssysteem:Windows 6.1; UI Render: standaard; 
Locale: nl-NL (nl_NL)
Comment 11 David Girault 2016-06-29 13:03:51 UTC
Bug exist for checkbox AND radio button.
Growing checkbox area up to whole page width show very big text.
Comment 12 David Girault 2016-06-29 13:16:44 UTC
Other forms controls seem to be correctly handled by Calc.

Additionally, those checkbox and radio button are correctly exported to PDF and displayed in preview by Writer when inserted in a text document...


Version: 5.1.4.2
Build ID: 1:5.1.4-0ubuntu1~wily1
Threads CPU : 8; Version de l'OS :Linux 4.2; UI Render : par défaut; 
Locale : fr-FR (fr_FR.UTF-8)
Comment 13 Adolfo Jayme Barrientos 2016-07-03 09:57:00 UTC
*** Bug 100722 has been marked as a duplicate of this bug. ***
Comment 14 V Stuart Foote 2016-07-03 13:09:48 UTC
Issue continues present on Windows 10 Pro 64-bit en-US with
Version: 5.2.0.1 (x64)
Build ID: fcbcb4963bda8633ba72bd2108ca1e802aad557d
CPU Threads: 8; OS Version: Windows 6.19; UI Render: GL; 
Locale: en-US (en_US)
Comment 15 V Stuart Foote 2016-07-03 16:16:18 UTC
The form controls for Checkbox or Radio Button inserted into a Writer document do not seem to be affected on print preview or printing. So only affecting the Form controls when used in Calc.
Comment 16 Buovjaga 2016-07-15 17:38:03 UTC
*** Bug 97244 has been marked as a duplicate of this bug. ***
Comment 17 Buovjaga 2016-07-15 17:40:45 UTC
Adding raal's bisect result from bug 97244 and Tomaž to CC.
 946e3a3d952ed45ff0926b767839a5d2fa7b7979 is the first bad commit
commit 946e3a3d952ed45ff0926b767839a5d2fa7b7979
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Fri Oct 23 16:14:34 2015 -0700

    source 825b3df7f1d987021ec4a08ff8e7ed78e5772c97

    source 825b3df7f1d987021ec4a08ff8e7ed78e5772c97

:040000 040000 01312231b6615ea6a935cdba9f9362d2f2317970 17c5357be64abeac0cd39706edc1efb5c014d936 M      instdir

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.com>	2015-10-22 17:03:01 (GMT)
committer	Tomaž Vajngerl <tomaz.vajngerl@collabora.com>	2015-10-22 17:16:14 (GMT)
commit 825b3df7f1d987021ec4a08ff8e7ed78e5772c97 (patch)
tdf#94138 fix printing of edit form fields
Comment 18 rollingerw 2016-07-25 11:02:07 UTC
Installed Version 5.1.4.2 on system x64 and x86 and now the text is not enlarged anymore but instead there is no text at all.

x86: Build-ID: f99d75f39f1c57ebdd7ffc5f42867c12031db97a
CPU-Threads: 2; BS-Version: Windows 6.1; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE)
Comment 19 Alberto Ferreira 2016-08-02 18:00:38 UTC
The error continues to exist in LO 5.1.5.2 x64 and X86 Windows 10 and Windows XP.

The check box is pinted correctly in place in preview and printer. The text associate with the check-box are incorrectly printed with a very large fonte.

The size of the text from the check box is not correctly assumed when printing.

Best Regards,
Alberto Ferreira
Comment 20 Caolán McNamara 2016-08-04 13:00:48 UTC
*** Bug 100449 has been marked as a duplicate of this bug. ***
Comment 21 Commit Notification 2016-08-04 14:01:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5a5db03acc605a02c76c0f2977079b3dcf48de22

Resolves: tdf#97120 printing controls uses wrong font and font sizes

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Caolán McNamara 2016-08-04 14:05:13 UTC
So that seems to work for me for both the old and new problems. 5-2 review in gerrit. If its acceptable I'll consider backporting for 5-1 too.
Comment 23 Commit Notification 2016-08-09 19:37:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1449d36eaf926ef321568253b68c546acee2f4db&h=libreoffice-5-2

Resolves: tdf#97120 printing controls uses wrong font and font sizes

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Buovjaga 2016-08-10 16:20:46 UTC
LucN31 verified the fix in bug 100449.