Resolves: tdf#97120 printing controls uses wrong font and font sizes

regression apparently since

commit 825b3df7f1d987021ec4a08ff8e7ed78e5772c97
Date:   Thu Oct 22 19:03:01 2015 +0200

    tdf#94138 fix printing of edit form fields

revert the GetDrawPixelFont part of that so the font is pulled
from the control and not the device its printed to, this makes
tdf#97120 and tdf#97120 work properly again

then revert

commit 6c41727484a04ab89005ffb052937dae5d7dc223
Date:   Tue Dec 1 17:44:23 2015 +0100

    tdf#94138 Use correct fonts for multiline edit when printing

because that replicates the original GetDrawPixelFont behaviour
so its not needed after the other revert.

Then, to solve the original tdf#94138, in the edit StateChanged handler call
ApplySettings(*this); like FixedText::StateChanged does to merge in the
controlfont setting to the underlying OutputDevice of the control, which
presumably is what is then retrieved from GetDrawPixelFont

Change-Id: I992a0e2011ffce7748d39f7f2bc49fbf6b8eaa79
(cherry picked from commit 5a5db03acc605a02c76c0f2977079b3dcf48de22)